# LED_flight

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-overrides.yaml  .pylintrc-circuitpython  .secrets.baseline  .tim-patterns.yaml  CLAUDE-PROJECT.md  CLAUDE.md  README.md  aircraft_size.py  brightness.py  code.py  daily_stats.py  display_helpers.py  flight_api.py  flight_region.py  font4.py  iata_info.json  iata_us_info.json  kdnode.py  led_flight.py  modbus_led.py  modbus_relay_class.py  offline_alt_lon_city.py  plane_icon.py  pyproject.toml  requirements-dev.txt  run_ledflight.sh  setup.sh  test_char_width.py  test_label_widths.py  test_scroll_overflow.py  utility.py
.claude/memory/: project_two_devices.md
.github/workflows/: ci.yml
MP_S3/: adafruit-circuitpython-adafruit_matrixportal_s3-en_US-9.2.9.uf2
MP_S3/lib/adafruit_matrixportal/: graphics.mpy  matrix.mpy  matrixportal.mpy
MP_S3/lib/adafruit_portalbase/: wifi_coprocessor.mpy  wifi_esp32s2.mpy
lib/adafruit_matrixportal/: network.mpy
lib/adafruit_portalbase/: __init__.mpy  graphics.mpy  network.mpy
plans/active/: bug-fix-plan.md  feature-enhancements.md
plans/completed/: 2026-04-05-ota-updates.md  bug-fix-plan.md  feature-enhancements.md  led-flight-server.md
plans/drafts/: bug-fix-plan.md
resources/JL4Z/: 5example_code.txt
